# LifeGame

./: README.md  grid.py  life_game.py  main.py  pom.xml  pyproject.toml  requirements-dev.txt  tasks.md
game_of_life/: cell.py
src/: Grid.js  Grid.py  grid.h  grid.js  grid.py  grid.rs  grid.ts
src/main/java/: Grid.java
src/main/java/com/gameoflife/: Grid.java
src/main/java/com/gameoflife/cell/: CellState.java
src/main/java/com/snakegame/model/: Grid.java
src/main/resources/: application.yml
tests/: test_cell.py  test_life_game.py
